# typesetting_lds_scriptures

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  scratch.ipynb
scripts/: build_pdf.py  debug_footnote_compare.py  debug_matthew_spacing.py  debug_wrap_compare.py  debug_wrap_section84.py  html_inventory.py  scrape_and_typeset.py
scriptures/: __init__.py  cleaning.py  ingest.py  layout_utils.py  models.py  parser.py  pdf_builder.py  scraper.py  text.py
scriptures/pdf/: __init__.py  builder.py  pdf_columns.py  pdf_constants.py  pdf_footnotes.py  pdf_footnotes_labels.py  pdf_footnotes_layout.py  pdf_footnotes_tables.py  pdf_pagination.py  pdf_pagination_fit.py  pdf_pagination_fit_support.py  pdf_pagination_fit_types.py  pdf_pagination_flow.py  pdf_settings.py  pdf_story.py  pdf_text.py  pdf_text_flowables.py  pdf_text_html.py  pdf_text_line_base.py  pdf_text_line_builder.py  pdf_text_line_entry.py  pdf_text_line_footnotes.py  pdf_text_line_helpers.py  pdf_text_line_mixins_build.py  pdf_text_line_mixins_paragraphs.py  pdf_text_line_mixins_titles.py  pdf_text_line_mixins_verses.py  pdf_text_lines.py  pdf_types.py
src/lds_typesetting/: __init__.py  clean.py  layout.py  scraping.py
