[project]
name = "scriptures"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.12.2",
    "markdownify==0.11.6",
    "pyphen>=0.17.2",
    "reportlab>=4.4.5",
    "requests==2.31.0",
    "tqdm>=4.67.1",
]
